table_3/results/Meal-Planner-post-nullaway-ann.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/mealplanner-ann-post/src/src/main/java/de/zuellich/meal_planner/controller/PinterestExplorer.java:81: error: [NullAway] dereferenced expression e.getCause() is @Nullable
          System.out.println("!! Error downloading pin: " + e.getCause().getMessage());
                                                                        ^
    (see http://t.uber.com/nullaway )
Note: /home/nima/Desktop/nullability-docker/table_3/versions/nullaway/mealplanner-ann-post/src/src/main/java/de/zuellich/meal_planner/config/WebConfig.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: /home/nima/Desktop/nullability-docker/table_3/versions/nullaway/mealplanner-ann-post/src/src/main/java/de/zuellich/meal_planner/pinterest/datatypes/Pin.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 671ms
0
